--- a/templates/MainForum.html
+++ b/templates/MainForum.html
@@ -183,7 +183,8 @@ button:hover {
          transform: translate(-50%, -50%);
          width: 200px;
          height: 50px;
-         ">פורום הנדסת תוכנה כללי</button> <br>
+        "onclick="location.href='/blog/32'">פורום הנדסת תוכנה כללי</button> <br>
+
         <div class="year-headers">
             <div class="year">
                 <h2>שנה רביעית</h2>
