--- a/templates/blog.detail.html
+++ b/templates/blog.detail.html
@@ -5,10 +5,13 @@
     <title>{{ blog.title }}</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            background: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgb(115, 126, 126));
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            height: 100vh;
             margin: 0;
             padding: 0;
-            background-color: rgba(197, 197, 197, 0.2);
+            font-family: Arial, sans-serif;
             direction: rtl;
         }
         header {
