--- a/templates/MainForum.html
+++ b/templates/MainForum.html
@@ -6,10 +6,13 @@
     <title>Main Page</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: rgba(197, 197, 197, 0.2);
+        background: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgb(115, 126, 126));
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        height: 100vh;
             margin: 0;
             padding: 0;
+            font-family: Arial, sans-serif;
         }
         .container {
             display: flex;
